--- a/dropwizard-extra-hdfs/pom.xml
+++ b/dropwizard-extra-hdfs/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>dropwizard-extra</artifactId>
         <groupId>com.datasift.dropwizard</groupId>
-        <version>0.5.1-4-SNAPSHOT</version>
+        <version>0.6.2-1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>dropwizard-extra-hdfs</artifactId>
@@ -14,89 +14,52 @@
     </description>
     <url>http://datasift.github.com/dropwizard-extra/dropwizard-extra-hdfs</url>
     <properties>
+        <hadoop.version>2.0.0-cdh4.1.3</hadoop.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>cloudera.cdh4</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--<artifactId>hadoop-client</artifactId>-->
-            <!--<version>0.22.0</version>-->
-
-        <!--</dependency>-->
-        <dependency>
-            <groupId>commons-pool</groupId>
-            <artifactId>commons-pool</artifactId>
-            <version>1.6</version>
-
-        </dependency>
-        <dependency>
-
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-core</artifactId>
-        <version>1.1.0</version>
-            <scope>test</scope>
-
-        </dependency>
-        <dependency>
-        <groupId>org.apache.hadoop</groupId>
-    <artifactId>hadoop-hdfs</artifactId>
-    <version>0.23.1</version>
-    <scope>test</scope>
-
-</dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.apache.tomcat</groupId>-->
-            <!--<artifactId>tomcat-dbcp</artifactId>-->
-            <!--<version>7.0.29</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--<artifactId>hadoop-common</artifactId>-->
-            <!--<version>0.23.1</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--<artifactId>hadoop-mapreduce</artifactId>-->
-            <!--<version>0.23.1</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--<artifactId>hadoop-mapred</artifactId>-->
-            <!--<version>0.22.0</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--<artifactId>hadoop-mapreduce-client-app</artifactId>-->
-            <!--<version>0.23.1</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>com.datasift.dropwizard</groupId>
             <artifactId>dropwizard-extra-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>1.6</version>
         </dependency>
         <dependency>
-            <groupId>com.cloudera</groupId>
+            <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
-            <version>0.21.0</version>
+            <version>${hadoop.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.11</version>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>${hadoop.version}</version>
         </dependency>
     </dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-core-asl</artifactId>
+                <version>1.9.11</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-mapper-asl</artifactId>
+                <version>1.9.11</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
