--- a/dropwizard-extra-scala/pom.xml
+++ b/dropwizard-extra-scala/pom.xml
@@ -42,6 +42,11 @@
       <!-- Can't use version of jackson-core from upstream as they're released separately -->
       <version>2.1.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.clapper</groupId>
+      <artifactId>grizzled-slf4j_${scala.version}</artifactId>
+      <version>0.6.10</version>
+    </dependency>
 
     <!-- Optional Dependencies (for per-module Scala support) -->
     <dependency>
