--- a/dropwizard-extra-gelf/pom.xml
+++ b/dropwizard-extra-gelf/pom.xml
@@ -19,10 +19,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.yammer.dropwizard</groupId>
+      <groupId>com.codahale.dropwizard</groupId>
       <artifactId>dropwizard-core</artifactId>
       <version>${dropwizard.version}</version>
     </dependency>
   </dependencies>
 </project>
-
